@@ -10,7 +10,6 @@
 Фичи
 ----
 
-* добавить публикацию по http mpegts post
 * Периодический перезапрос авторизации на открытых персистентных сессиях
 * mpeg2coder
 * Другие авторизационные бекенды
