@@ -359,6 +359,7 @@ test_rerequest_expiring_unique_session() ->
 
 
 
+
 test_session_is_not_destroyed_after_rerequest() ->
   Self = self(),
   meck:expect(flu_session, backend_request, fun(_, _, _) ->
@@ -463,32 +464,44 @@ test_unique_session_with_persistent_connection_same_ip() ->
   ok.
 
 
+
+
+
+
 % Perhaps we should recheck authorization once in some time for persistent connections
-%
-% test_periodic_refresh_of_auth() ->
-%   meck:expect(flu_session, backend_request, fun(_, _, _) ->
-%     {ok,[{access,granted},{user_id,14},{unique,true}]} 
-%   end),
 
-%   Pid1 = spawn(fun() ->
-%     receive Msg -> Msg end
-%   end),
+test_periodic_refresh_of_auth() ->
+  meck:expect(flu_session, backend_request, fun(_, _, _) ->
+    {ok,[{access,granted},{user_id,14},{unique,true},{auth_time,4000}]} 
+  end),
 
-%   ?assertEqual({ok, <<"cam0">>},
-%     flu_session:verify(http_mock_url(), [{ip,<<"127.0.0.1">>},{token,<<"1">>},{name,<<"cam0">>}], [{pid,Pid1}])),
-%   ?assertMatch([#session{ip = <<"127.0.0.1">>, pid = Pid1}], 
-%     ets:select(flu_session:table(), ets:fun2ms(fun(#session{user_id = 14, access= granted} = E) -> E end))),
+  Pid1 = spawn(fun() ->
+    receive Msg -> Msg end
+  end),
 
-%   ?assert(erlang:is_process_alive(Pid1)),
+  Identity = [{ip,<<"127.0.0.1">>},{token,<<"1">>},{name,<<"cam0">>}],
+  ?assertEqual({ok, <<"cam0">>},
+    flu_session:verify(http_mock_url(), Identity, [{pid,Pid1}])),
+  ?assertMatch([#session{ip = <<"127.0.0.1">>, pid = Pid1}], 
+    ets:select(flu_session:table(), ets:fun2ms(fun(#session{user_id = 14, access= granted} = E) -> E end))),
 
-%   ?assertEqual({ok, <<"cam0">>},
-%     flu_session:verify(http_mock_url(), [{ip,<<"127.0.0.1">>},{token,<<"1">>},{name,<<"cam0">>}], [{pid,Pid1}])),
-%   ?assertMatch([#session{ip = <<"127.0.0.1">>, pid = Pid1}], 
-%     ets:select(flu_session:table(), ets:fun2ms(fun(#session{user_id = 14, access= granted} = E) -> E end))),
-%   ?assert(erlang:is_process_alive(Pid1)),
+  ?assert(erlang:is_process_alive(Pid1)),
+
+  Now = flu:now_ms(),
+  #session{} = Session = flu_session:find_session(Identity),
+  Session1 = Session#session{last_access_time = Now - 6000}, % a bit more than auth duration
+  ets:insert(flu_session:table(), Session1),
+
+  meck:expect(flu_session, backend_request, fun(_, _, _) ->
+    {ok,[{access,denied}]} 
+  end),
+
+  flu_session:recheck_connected(),
+
+  % FIXME: здесь Pid1 должен умереть
+  % ?assertNot(erlang:is_process_alive(Pid1)),
   
-%   Pid1 ! stop,
-%   ok.
+  ok.
 
 
 
